# tpde

./: .gitignore  AGENTS.md  CLAUDE.local.md  CLAUDE.md  TPDE.md
.claude/: settings.local.json
rust/: Cargo.toml  FILE_INVENTORY.md  INSTRUCTIONS.md  LOGGING.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_PLAN.md  REFACTORING_VISUAL.md  block_successor_analysis.md  build.rs  elegant.md  find_duplicates.py  replace_println.py  test_control_flow.rs  test_gep_functionality.rs  test_icmp_functionality.rs  test_memory_ops.rs  test_phi_resolution.rs  test_return_instructions.rs  test_simple_return.rs
rust/.cargo/: config.toml
rust/examples/: debug_rpo.rs  debug_rpo_advanced.rs  debug_rpo_cpp_style.rs  debug_rpo_final.rs  debug_rpo_sorting.rs  gep_test.rs  test_call_instruction.rs  test_function_calls.rs  test_real_codegen.rs  test_rpo_fix.rs
rust/src/: analyzer.rs  assembler.rs  calling_convention.rs  compilation_session.rs  compiler.rs  complete_compiler.rs  encodegen.rs  error.rs  function_analysis_result.rs  function_analyzer.rs  function_analyzer_arena.rs  function_analyzer_v2.rs  function_codegen.rs  instruction_selection_test.rs  lib.rs  llvm_adaptor.rs  llvm_compiler.rs  llvm_compiler_concrete.rs  overview.rs  phi_resolver.rs  register_file.rs  value_assignment.rs  value_ref.rs  x64_backend.rs  x64_encoder.rs
rust/src/codegen/: encoder.rs  mod.rs  patterns.rs
rust/src/core/: adaptor.rs  analyzer.rs  assembler.rs  compiler.rs  error.rs  memory_strategy.md  mod.rs  register_file.rs  session.rs  test_utils.rs  value_assignment.rs  value_ref.rs
rust/src/docs/: mod.rs
rust/src/experimental/: mod.rs
rust/src/experimental/arm64/: mod.rs
rust/src/legacy/: generic_compiler.rs  minimal_adaptor.rs  mod.rs
rust/src/llvm/: adaptor.rs  analysis_result.rs  call_support.rs  compiler.rs  function_analysis.rs  memory_limit_test.rs  mod.rs  phi_resolution.rs  traits.rs
rust/src/llvm_adaptor/: basic.rs  enhanced.rs
rust/src/templates/: mod.rs
rust/src/test_ir/: adaptor.rs  check.rs  compiler.rs  mod.rs  parser.rs
rust/src/x64/: backend.rs  calling_convention.rs  encoder.rs  function_codegen.rs  mod.rs
rust/tests/: advanced_call_test.rs  alloca_test.rs  alloca_test_simple.rs  bitwise_operations_test.rs  call_test.rs  division_test.rs  elf_assembler.rs  integer_conversion_test.rs  llvm_compiler_tests.rs  phi_resolution_test.rs  phi_test.rs  shift_operations_test.rs  successor_test.rs  switch_test.rs  tir_compiler_tests.rs  tir_filecheck_tests.rs  tir_filetest_runner.rs  tir_tests.rs
rust/tpde/: Cargo.toml
rust/tpde-core/: Cargo.toml
rust/tpde-core/examples/: gep_test.rs  test_call_instruction.rs
rust/tpde-core/src/: adaptor.rs  analyzer.rs  assembler.rs  calling_convention.rs  compiler.rs  complete_compiler.rs  guide.rs  lib.rs  llvm_compiler.rs  overview.rs  register_file.rs  value_assignment.rs  x64_backend.rs  x64_encoder.rs
rust/tpde-core/tests/: elf_assembler.rs
rust/tpde-encodegen/: Cargo.toml
rust/tpde-encodegen/src/: lib.rs  main.rs
rust/tpde-llvm/: Cargo.toml
rust/tpde-llvm/src/: enhanced_adaptor.rs  lib.rs
rust/tpde-macros/: Cargo.toml
rust/tpde-macros/src/: lib.rs
rust/tpde/src/: lib.rs
