[package]
name = "tpde"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "encodegen"
path = "src/bin/encodegen.rs"

[dependencies]
object = { version = "0.37", features = ["all"] }
iced-x86 = { version = "1.21", features = ["code_asm"] }
bumpalo = { version = "3.16", features = ["allocator-api2"] }
inkwell = { git = "https://github.com/stevefan1999-personal/inkwell.git", features = ["llvm19-1-prefer-dynamic"] }
llvm-sys = { version = "191", features = ["prefer-dynamic"] }
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"