[package]
name = "tpde-llvm"
version = "0.1.0"
edition = "2021"

[dependencies]
inkwell = { workspace = true }
llvm-sys = { workspace = true }
tpde-core = { path = "../tpde-core" }

[[bin]]
name = "test_phi_resolution"
path = "../test_phi_resolution.rs"

[[bin]]
name = "test_return_instructions"
path = "../test_return_instructions.rs"

[[bin]]
name = "test_gep_functionality"
path = "../test_gep_functionality.rs"

[[bin]]
name = "test_icmp_functionality"
path = "../test_icmp_functionality.rs"

[lib]
path = "src/lib.rs"
